--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -16,10 +16,10 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
-        go-version: 1.x
+        go-version: go1.20.2 windows/amd64
 
     - name: Build
       run: go build
 
     - name: Test
-      run: go test ./...
+      run: go test ./UnitTest
