--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,4 +1,4 @@
-name: CI/CD Workflow
+name: Go CI/CD
 
 on:
   push:
@@ -10,16 +10,16 @@ jobs:
     runs-on: windows-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.x # 设置所需的 Go 版本
+          
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Set up Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: go1.x
+      - name: Build
+        run: go build ./
 
-    - name: Build
-      run: go build
-
-    - name: Test
-      run: go test ./UnitTest
+      - name: Test
+        run: go test ./UnitTest
